--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,17 +14,13 @@
    </listener>
 
     <servlet>
-        <servlet-name>dispatcher</servlet-name>
+        <servlet-name>front</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>dispatcher</servlet-name>
-        <url-pattern>*</url-pattern>
+        <servlet-name>front</servlet-name>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
-
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
 </web-app>
