--- a/build.xml
+++ b/build.xml
@@ -72,12 +72,14 @@
         <property name="basename" value="sample_app"/>
         <property name="war.path" value="${pkg.dir}/${basename}.war"/>
         <war destfile="${war.path}" webxml="${web.inf.path}/web.xml">
-            <lib dir="${lib.dir}/spring" includes="*.jar" />
+            <lib dir="${lib.dir}/commons" includes="*.jar" />
+            <lib dir="${lib.dir}/h2" includes="*.jar" />
             <lib dir="${lib.dir}/hibernate" includes="*.jar" />
             <lib dir="${lib.dir}/logging" includes="*.jar" />
+            <lib dir="${lib.dir}/spring" includes="*.jar" />
             <lib dir="${lib.dir}/velocity" includes="*.jar" />
-            <lib dir="${lib.dir}/commons" includes="*.jar" />
             <classes dir="${classes.dir}" includes="**" />
+            <classes dir="${src.dir}" includes="db/hibernate-mappings/**" />
             <webinf dir="${web.inf.path}" includes="**" />
             <webinf dir="${web.path}" includes="*.jsp" />
             <metainf dir="${meta.inf.path}" includes="**" />
